--- a/Lab4/ProductsInAngular/src/app/components/products/products.component.css
+++ b/Lab4/ProductsInAngular/src/app/components/products/products.component.css
@@ -6,6 +6,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
 }
+
 .product-card {
     width: 270px;
     margin: 10px;
@@ -17,6 +18,7 @@
 .product-card-image {
     height: 200px;
 }
+
 .product-card-image > img {
     width: 100%;
     height: 100%;
@@ -27,11 +29,35 @@
     font-size: 18px;
     height: 50px;
 }
+
 .product-card-description {
     font-size: 14px;
     font-weight: 600;
     height: 40px;
     margin-bottom: 10px;
 }
+
 .product-card-rating {
+    margin-bottom: 10px;
+}
+
+.product-card-share {
+    display: flex;
+    justify-content: right;
+    gap: 10px;
+    margin: 5px;
+}
+
+.product-card-share > button {
+    width: 80px;
+    background: #287cce;
+    padding: 10px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 600;
+}
+
+.product-card-share > button:hover {
+    background: #084b8c;
+
 }
