--- a/Lab4/ProductsInAngular/src/app/components/products/products.component.html
+++ b/Lab4/ProductsInAngular/src/app/components/products/products.component.html
@@ -4,7 +4,7 @@
             <img src="{{product.image}}" alt="{{product.name}}">
         </div>
         <div class="product-card-name">
-            <a href="{{product.link" target="_blank">{{ product.name }}</a>
+            <a href="{{product.link}}" target="_blank">{{ product.name }}</a>
         </div>
         <div class="product-card-description">
             <p>{{ product.description }}</p>
